--- a/.azure-devops/graphitation-release.yml
+++ b/.azure-devops/graphitation-release.yml
@@ -14,6 +14,13 @@ variables:
   - name: adoNpmFeedName
     value: npm-mirror
 
+resources:
+  repositories:
+    - repository: 1ESPipelineTemplates
+      type: git
+      name: 1ESPipelineTemplates/1ESPipelineTemplates
+      ref: refs/tags/release
+
 extends:
   template: v1/1ES.Official.PipelineTemplate.yml@1ESPipelineTemplates
 
